k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adome-ingress
  annotations:
     
    nginx.ingress.kubernetes.io/use-regex: "true"  
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /tenant(/|$)(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: tenant-service
            port:
              number: 8000
      - path: /user(/|$)(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 8000

      - path: /mediamanager(/|$)(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: media-service
            port:
              number: 8000
      - path: /media(/|$)(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: media-service
            port:
              number: 8000

      - path: /payment(/|$)(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-service
            port:
              number: 8000

      - path: /static(/|$)(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: media-service
            port:
              number: 8000
